--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
