create github pages

--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
 
     
 
@@ -91,11 +91,9 @@
 <br>~Уникальный трекер Agenyz, который позволит отследить состояние здоровья вашего организма на протяжении всего дня, нормализовать ваш сон и подобрать режим правильного питания и тренировок
 <br>~ На протяжении 11 месяцев будете каждый месяц получать подарки в размере 50% от стоимости вашего заказа.
 </strong><br><br>Весь комплекс состоит из <a href="CellElixir.html" target="_blank">Элексиров Здоровья</a>,  функционального питания основы <a href="TrueShake.html" target="_blank">Alfa Shake и 5 добавок</a>, которыми вы можете заменять перекусы и даже прием пищи, и <a href="TrueAqua.html">функциональный напитков </a><a href="TrueAqua.html" target="_blank">True-Aqua</a> .
-<br>
-<br><strong><br></strong><br><strong>В  состав набора входят:
+<strong><br></strong><br><strong>В  состав набора входят:
 </strong><br><strong>5 продуктов линейки CellElixir:
-</strong><br>
-<br><a href="CellElixir.html" target="_blank">· СеллГенетикс
+</strong><br><a href="CellElixir.html" target="_blank">· СеллГенетикс
 </a><br><a href="CellElixir.html" target="_blank">· АльфаОмега-Q10
 </a><br><a href="CellElixir.html" target="_blank">· 3Д-Матрикс
 </a><br><a href="CellElixir.html" target="_blank">· ГепаИнт
@@ -171,8 +169,8 @@
 
     
     <div class="container align-center">
-        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">Оздоровительная Программа .</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Итак, заряжаемся здоровьем на весь день:</h3>
+        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong>Оздоровительная Программа</strong></h2>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5"><strong>Итак, заряжаемся здоровьем на весь день:</strong></h3>
         <div class="media-container-column">
             <div class="row justify-content-center">
                 <div class="card p-4 col-12 col-md-6 col-lg-4">
