create github pages

--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
 
     
 
@@ -90,7 +90,7 @@
 <br>~ Профилактику сердечно-сосудистых заболеваний, новообразований и сахарного диабета
 <br>~Уникальный трекер Agenyz, который позволит отследить состояние здоровья вашего организма на протяжении всего дня, нормализовать ваш сон и подобрать режим правильного питания и тренировок
 <br>~ На протяжении 11 месяцев будете каждый месяц получать подарки в размере 50% от стоимости вашего заказа.
-</strong><br><br>Весь комплекс состоит из <a href="CellElixir.html" target="_blank">Элексиров Здоровья</a>,  функционального питания основы <a href="TrueShake.html" target="_blank">Alfa Shake и 5 добавок</a>, которыми вы можете заменять перекусы и даже прием пищи, и <a href="TrueAqua.html">функциональный напитков </a><a href="TrueAqua.html" target="_blank">True-Aqua</a> .
+</strong><br><br>Весь комплекс состоит из <a href="CellElixir.html" target="_blank">Эликсиров Здоровья</a>,  функционального питания основы <a href="TrueShake.html" target="_blank">Alfa Shake и 5 добавок</a>, которыми вы можете заменять перекусы и даже прием пищи, и <a href="TrueAqua.html">функциональный напитков </a><a href="TrueAqua.html" target="_blank">True-Aqua</a> .
 <strong><br></strong><br><strong>В  состав набора входят:
 </strong><br><strong>5 продуктов линейки CellElixir:
 </strong><br><a href="CellElixir.html" target="_blank">· СеллГенетикс
@@ -287,8 +287,8 @@
                     <a href="mailto:vitalyvip@yandex.ru">Email: vitalyvip@yandex.ru</a>&nbsp;<br><a href="tel:+79141515543">Phone (WhatsApp): </a><br><a href="tel:+79141515543">+7 914 15 15 543</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="https://agenyz.com/" target="_blank">Официальный сайт Компании здесь</a></h5>
-                <p class="mbr-text">В этом сайте использованы<br>материалы из официального сайта &nbsp;компании AGenYZ</p>
+                <h5 class="pb-3">По  вопросам  партнерства  и  продукции  свяжитесь  с  нами   по телефону,  email  или  через  соц.сети</h5>
+                <p class="mbr-text"></p>
             </div>
         </div>
         <div class="footer-lower">
@@ -299,7 +299,8 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">По &nbsp;вопросам &nbsp;партнерства &nbsp;и &nbsp;продукции &nbsp;свяжитесь &nbsp;с &nbsp;нами &nbsp; по телефону, &nbsp;email &nbsp;или &nbsp;через &nbsp;соц.сети</p>
+                    <p class="mbr-text mbr-fonts-style display-7">В этом сайте использованы 
+<br>материалы из официального сайта компании <a href="https://agenyz.com/" target="_blank">AGenYZ</a></p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
