--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
