create github pages

--- a/CellElixir.html
+++ b/CellElixir.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
@@ -96,7 +96,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="CellGenetiX.html" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>Купить<br>4 000 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -126,8 +126,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/alfaomega-q10/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 900 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -155,7 +154,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="3D-Matrix.html" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>Купить<br>2 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -198,8 +197,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/gepaint/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 900 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -227,8 +225,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/slimhit/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 900 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -344,7 +341,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
