--- a/TrueShake.html
+++ b/TrueShake.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
@@ -102,7 +102,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/alfashake/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>Купить<br>2 500 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -130,8 +130,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/alfamix/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -158,7 +157,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/beautyz/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>Купить<br>1 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -222,8 +221,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/relaxyz/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -262,8 +260,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/shapyz/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -309,8 +306,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/digestyz/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
 
@@ -350,8 +346,7 @@
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/greenyz/" class="btn btn-primary display-4" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             Подробнее
-                        </a> <a href="https://office.agenyz.com/?bonus=007-432703" class="btn btn-primary display-4" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                            Купить<br>1 700 руб.<br></a></div>
+                        </a></div>
                 </div>
             </div>
         </div>
@@ -440,7 +435,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
