--- a/home.github.io.html
+++ b/home.github.io.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
@@ -180,7 +180,7 @@
 <strong>(в подарок)</strong><br>Умный Трекер AGenYZ
 <strong>(в подарок)</strong><br>pH Баланс Селл (5 шт)
 <br>СорбиоДетокс Селл (5шт)
-<br>Иммун Селл (5шт)<br><br><strong>Стоимость набора 27 500 руб</strong>.<br><br><br><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Умный Трекер AGenYZ </em></strong><br>Это эксклюзив во всех смыслах слова. 🔥
+<br>Иммун Селл (5шт)<br><br><br><br><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Умный Трекер AGenYZ </em></strong><br>Это эксклюзив во всех смыслах слова. 🔥
 <br>AGenYZ расширяет линейку брендированных товаров — теперь доступен умный трекер. Приобрести его можно только в составе сета. Более того: во всём мире его сейчас можно получить ТОЛЬКО у нас. Это разработка российской компании, которая прошла строжайший отбор главного критика и испытателя трекеров — Олега Андрийчука. 
 <br>
 <br>Сооснователь компании лично протестировал больше десятка трекеров, прочёл неохватное количество информации, чтобы найти тот самый. От аналогов умный трекер AGenYZ отличается широким спектром функций! 
@@ -223,7 +223,7 @@
 <br>СлимХит
 <br>Альфа Шейк (2 шт)
 <br>Альфа Микс (2 шт)
-<br>Фирменный пакет<br><br><strong>Стоимость набора 27 500 руб.</strong><br><br><br><strong><br></strong><br></p>
+<br>Фирменный пакет<br><br><br><br><strong><br></strong><br></p>
                     </div>
                 </div>
             </div>
@@ -260,8 +260,8 @@
                     <a href="mailto:vitalyvip@yandex.ru">Email: vitalyvip@yandex.ru</a>&nbsp;<br><a href="tel:+79141515543">Phone (WhatsApp): </a><br><a href="tel:+79141515543">+7 914 15 15 543</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="https://agenyz.com/" target="_blank">Официальный сайт Компании здесь</a></h5>
-                <p class="mbr-text">В этом сайте использованы<br>материалы из официального сайта &nbsp;компании AGenYZ</p>
+                <h5 class="pb-3">По вопросам партнерства и продукции свяжитесь с нами по телефону, email или через соц.сети</h5>
+                <p class="mbr-text"></p>
             </div>
         </div>
         <div class="footer-lower">
@@ -272,7 +272,8 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">По &nbsp;вопросам &nbsp;партнерства &nbsp;или &nbsp;приобретения продукции свяжитесь &nbsp;с &nbsp;нами &nbsp; по телефону, &nbsp;email &nbsp;или &nbsp;через &nbsp;соц.сети</p>
+                    <p class="mbr-text mbr-fonts-style display-7">В этом сайте использованы 
+<br>материалы из официального сайта компании <a href="https://agenyz.com/" target="_blank">AGenYZ</a></p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
@@ -318,7 +319,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
