--- a/github.io.html
+++ b/github.io.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/agenyz-164x70.png" type="image/x-icon">
   <meta name="description" content="Главная">
   
-  <title>Page 14</title>
+  <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
