create github pages

--- a/html.html
+++ b/html.html
@@ -51,19 +51,18 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-7" href="home.html">
+                    <a class="nav-link link text-white display-7" href="home.github.io.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Продукция</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="CellElixir.html">Cell-Эликсиры</a><a class="dropdown-item text-white display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="dropdown-item text-white display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="dropdown-item text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="Производство.html" aria-expanded="false">
-                        Производство<br>и технологии</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы <br>о продукции</a></li>
+                        Продукция</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="CellElixir.html">Cell-Эликсиры</a><a class="dropdown-item text-white display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="dropdown-item text-white display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="dropdown-item text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="proizvodstvo.html" aria-expanded="false">Производство <br>и технологии</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы <br>о продукции</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page13.html" aria-expanded="false">Новости, акции, <br>подарки</a></li>
                 <li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false">Регистрация &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
@@ -181,7 +180,7 @@
 <strong>(в подарок)</strong><br>Умный Трекер AGenYZ
 <strong>(в подарок)</strong><br>pH Баланс Селл (5 шт)
 <br>СорбиоДетокс Селл (5шт)
-<br>Иммун Селл (5шт)<br><br><strong>Стоимость набора 27 500 руб</strong>.<br><br><br><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Умный Трекер AGenYZ </em></strong><br>Это эксклюзив во всех смыслах слова. 🔥
+<br>Иммун Селл (5шт)<br><br><br><br><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Умный Трекер AGenYZ </em></strong><br>Это эксклюзив во всех смыслах слова. 🔥
 <br>AGenYZ расширяет линейку брендированных товаров — теперь доступен умный трекер. Приобрести его можно только в составе сета. Более того: во всём мире его сейчас можно получить ТОЛЬКО у нас. Это разработка российской компании, которая прошла строжайший отбор главного критика и испытателя трекеров — Олега Андрийчука. 
 <br>
 <br>Сооснователь компании лично протестировал больше десятка трекеров, прочёл неохватное количество информации, чтобы найти тот самый. От аналогов умный трекер AGenYZ отличается широким спектром функций! 
@@ -224,7 +223,7 @@
 <br>СлимХит
 <br>Альфа Шейк (2 шт)
 <br>Альфа Микс (2 шт)
-<br>Фирменный пакет<br><br><strong>Стоимость набора 27 500 руб.</strong><br><br><br><strong><br></strong><br></p>
+<br>Фирменный пакет<br><br><br><br><strong><br></strong><br></p>
                     </div>
                 </div>
             </div>
@@ -261,8 +260,8 @@
                     <a href="mailto:vitalyvip@yandex.ru">Email: vitalyvip@yandex.ru</a>&nbsp;<br><a href="tel:+79141515543">Phone (WhatsApp): </a><br><a href="tel:+79141515543">+7 914 15 15 543</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="https://agenyz.com/" target="_blank">Официальный сайт Компании здесь</a></h5>
-                <p class="mbr-text">В этом сайте использованы<br>материалы из официального сайта &nbsp;компании AGenYZ</p>
+                <h5 class="pb-3">По вопросам партнерства и продукции свяжитесь с нами по телефону, email или через соц.сети</h5>
+                <p class="mbr-text"></p>
             </div>
         </div>
         <div class="footer-lower">
@@ -273,7 +272,8 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">По &nbsp;вопросам &nbsp;партнерства &nbsp;или &nbsp;приобретения продукции свяжитесь &nbsp;с &nbsp;нами &nbsp; по телефону, &nbsp;email &nbsp;или &nbsp;через &nbsp;соц.сети</p>
+                    <p class="mbr-text mbr-fonts-style display-7">В этом сайте использованы 
+<br>материалы из официального сайта компании <a href="https://agenyz.com/" target="_blank">AGenYZ</a></p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
