--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
