--- a/регистрация.html
+++ b/регистрация.html
@@ -51,10 +51,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-7" href="home.github.io.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                        
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Продукция</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="CellElixir.html">Cell-Эликсиры</a><a class="dropdown-item text-white display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="dropdown-item text-white display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="dropdown-item text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="proizvodstvo.html" aria-expanded="false">Производство <br>и технологии</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы <br>о продукции</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page13.html" aria-expanded="false">Новости, акции, <br>подарки</a></li>
+                        Продукция</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="CellElixir.html">Cell-Эликсиры</a><a class="dropdown-item text-white display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="dropdown-item text-white display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="dropdown-item text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="proizvodstvo.html" aria-expanded="false">Производство <br>и технологии</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы <br>о продукции</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page13.html" aria-expanded="false">Новости, <br>акции&nbsp;<br><br></a></li>
                 <li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false">Регистрация &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             
         </div>
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/v">html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
