--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-7" href="https://agenyz.github.io">
+                    <a class="nav-link link text-white display-7" href="github.io">
                         
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
