--- a/О деньгах.html
+++ b/О деньгах.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-7" href="github.io">
+                    <a class="nav-link link text-white display-7" href="home.html">
                         
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
 
     
 
