--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
