create github pages

--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
@@ -257,7 +257,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Контакты:</h5>
                 <p class="mbr-text">
-                    <a href="mailto:vitalyvip@yandex.ru">Email: vitalyvip@yandex.ru</a>&nbsp;<br><a href="tel:+79141515543">Phone (WhatsApp): </a><br><a href="tel:+79141515543">+7 914 15 15 543</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
+                    <a href="mailto:vitalyvip@yandex.ru">Email: vitalyvip@yandex.ru</a>&nbsp;<br><a href="tel:+79141515543">Phone (WhatsApp): </a><br>Виталий: &nbsp;<a href="tel:+79141515543">+7 914 15 15 543</a><br>Ирина: &nbsp;<a href="tel:+79147784352">+7 914 778 4352</a><a href="tel:+79141515543"><br></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">По вопросам партнерства и продукции свяжитесь с нами по телефону, email или через соц.сети</h5>
