--- a/proizvodstvo.html
+++ b/proizvodstvo.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="header1 cid-rqrtcW7FBr" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="header1 cid-rqrtcW7FBr" id="header16-3w">
 
     
 
@@ -169,12 +169,14 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Контакты:</h5>
-                <p class="mbr-text">
-                    <a href="mailto:vitalyvip@yandex.ru">Email: vitalyvip@yandex.ru</a>&nbsp;<br><a href="tel:+79141515543">Phone (WhatsApp): </a><br><a href="tel:+79141515543">+7 914 15 15 543</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
+                <p class="mbr-text">Email: <a href="mailto:vitalyvip@yandex.ru">vitalyvip@yandex.ru</a> 
+<br>Phone (WhatsApp): 
+<br>Виталий:  <a href="tel:+79141515543">+7 914 15 15 543</a>
+<br>Ирина:  <a href="tel:+79147784352">+7 914 778 4352</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="https://agenyz.com/" target="_blank">Официальный сайт Компании здесь</a></h5>
-                <p class="mbr-text">В этом сайте использованы<br>материалы из официального сайта &nbsp;компании AGenYZ</p>
+                <h5 class="pb-3"></h5>
+                <p class="mbr-text">В этом сайте использованы<br>материалы из<a href="https://agenyz.com/" target="_blank"> официального сайта &nbsp;компании AGenYZ</a></p>
             </div>
         </div>
         <div class="footer-lower">
