--- a/О деньгах.html
+++ b/О деньгах.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
 
     
 
@@ -576,7 +576,7 @@
                 
             </div>
 
-            <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/O_HQ_a3SF4g?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div class="mbr-figure" style="width: 105%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/O_HQ_a3SF4g?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
     </div>
