create github pages

--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-rKpyzc670f" id="image3-4u">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="cid-rKpyzc670f" id="image3-4u">
 
     
 
