create github pages

--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Новости, акции, подарки, статьи
 ">
   
-  <title>Новости, акции, подарки, статьи</title>
+  <title>Новости, акции</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="cid-rKpyzc670f" id="image3-4u">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rKpyzc670f" id="image3-4u">
 
     
 
