--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
